feat(core): multi tenant (#2217)